yaml/create-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deploy
  labels:
    app: etcd-admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etcd-admin
  template:
    metadata:
      labels:
        app: etcd-admin
    spec:
      containers:
        - name: etcd-admin
          image: pambrose/etcd-admin:1.0.2
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: etcd-admin
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
