yaml/create-counter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-deploy
  labels:
    app: etcd-counter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etcd-counter
  template:
    metadata:
      labels:
        app: etcd-counter
    spec:
      containers:
        - name: etcd-counter
          image: pambrose/etcd-counter:1.0.17
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: counter-service
spec:
  selector:
    app: etcd-counter
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
