yaml/create-election.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: election-deploy
  labels:
    app: etcd-election
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etcd-election
  template:
    metadata:
      labels:
        app: etcd-election
    spec:
      containers:
        - name: etcd-election
          image: pambrose/etcd-election:1.0.17
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: election-service
spec:
  selector:
    app: etcd-election
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
