yaml/create-prometheus-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-agent-deploy
  labels:
    app: prometheus-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-agent
  template:
    metadata:
      labels:
        app: prometheus-agent
    spec:
      containers:
        - name: prometheus-agent
          image: pambrose/prometheus-agent:1.4.1
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-agent-service
spec:
  selector:
    app: prometheus-agent
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
