yaml/create-recipes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-recipes-deploy
  labels:
    app: etcd-recipes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etcd-recipes
  template:
    metadata:
      labels:
        app: etcd-recipes
    spec:
      containers:
        - name: etcd-recipes
          image: pambrose/etcd-recipes-k8s-example:1.0.14
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: etcd-recipes-service
spec:
  selector:
    app: etcd-recipes
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
